--- a/src/app/layout/default/default.component.html
+++ b/src/app/layout/default/default.component.html
@@ -1,17 +1,7 @@
-<div id="wrapper">
+<div>
   <app-header></app-header>
-  <div id="page">
-    <div id="bgtop">
-      <div id="bgbottom">
-        <div id="content">
-
-          <ng-content></ng-content>
-
-        </div>
-        <app-sidebar></app-sidebar>
-        <div style="clear: both;">&nbsp;</div>
-      </div>
-    </div>
-  </div>
+  <main class="page">
+    <ng-content></ng-content>
+  </main>
   <app-footer></app-footer>
 </div>
