--- a/src/app/layout/default/default.component.scss
+++ b/src/app/layout/default/default.component.scss
@@ -1,18 +1,4 @@
-#wrapper {
-  background: url(../../../assets/images/bg02.jpg) repeat-x left top;
-}
-
-#bgtop {
-  background: url(../../../assets/images/bg05.jpg) no-repeat left top;
-}
-
-#bgbottom {
-  background: url(../../../assets/images/bg06.jpg) no-repeat left bottom;
-}
-
-#content {
-  float: left;
-  width: 650px;
-  padding: 50px 0 0 35px;
-  min-height: 400px;
+.page {
+  width: 100%;
+  padding: var(--spacing-xl) 0;
 }
