--- a/src/app/layout/default/footer/footer.component.scss
+++ b/src/app/layout/default/footer/footer.component.scss
@@ -1,30 +1,31 @@
+@use 'styles' as *;
 
-#footer {
-  display: flex;
-  flex-direction: column;
-  width:  920px;
-  height: 100px;
-  margin: 0 auto;
-  padding: 30px 0 0 0;
-  background: url(../../../../assets/images/bg07.jpg) no-repeat left top;
+.footer {
+  width: 100%;
 
-  .socials {
+  &__content {
+    width: 100%;
+    padding-top: 12rem;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 200px;
+    flex-direction: column;
     align-items: center;
-    margin: 0 auto 10px auto;
-  }
+    gap: var(--spacing-lg);
 
-  p {
-    margin: 0;
-    text-align: center;
-    font-size: 11px;
-  }
-
-  img {
-    height: 16px;
-    width: 16px;
+    &__socials {
+      display: flex;
+      gap: var(--spacing-2xl);
+      align-items: center;
+      
+      @include small {
+        gap: var(--spacing-lg);
+      }
+    }
+  
+    &__address {
+      margin: 0;
+      text-align: center;
+      font-size: var(--font-size-sm);
+      color: var(--color-text-muted);
+    }
   }
 }
