--- a/src/app/layout/default/menu-link/menu-link.component.scss
+++ b/src/app/layout/default/menu-link/menu-link.component.scss
@@ -1,1 +1,26 @@
+:host {
+   display: contents;
+}
 
+a, span {
+  display: inline-block;
+  font-size: var(--font-size-sm);
+  font-weight: 500;
+  text-decoration: none;
+  color: var(--color-primary);
+
+  &.secondary {
+    color: var(--color-text-secondary);
+    font-size: var(--font-size-xs);
+  }
+
+  &.current {
+    text-decoration: underline;
+  }
+}
+
+a {
+  &:hover {
+    text-decoration: underline;
+  }
+}
