--- a/src/app/pages/development/development.component.html
+++ b/src/app/pages/development/development.component.html
@@ -1,10 +1,5 @@
-<div class="post">
-  <div class="title">
-    <h2>{{ (page | async)?.title }}</h2>
-  </div>
-  <div class="entry">
-    @for (certificate of certificates | async; track certificate.id) {
-      <app-certificate [model]="certificate" />
-    }
-  </div>
+<div class="development">
+  @for (certificate of certificates | async; track certificate.id) {
+    <app-certificate [model]="certificate" />
+  }
 </div>
