--- a/src/app/pages/events/event/event.component.scss
+++ b/src/app/pages/events/event/event.component.scss
@@ -1,4 +1,25 @@
-.timestamp {
-  float: right;
-  text-decoration: underline;
+.event {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  padding-bottom: var(--spacing-md);
+  font-size: var(--font-size-sm);
+  align-items: baseline;
+  width: 100%;
+
+  &__title {
+      order: 1;
+      font-weight: 600;
+      color: var(--color-text);
+  }
+
+  &__date {
+      order: 2;
+      font-weight: 600;
+      color: var(--color-text-secondary);
+  }
+
+  &__description {
+      order: 3;
+      grid-column: 1 / span 2;
+  }
 }
