--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -1,12 +1,5 @@
-<div class="post">
-  <div class="title">
-    <h2>{{ (page | async)?.title }}</h2>
-  </div>
-  <div class="entry">
-    <app-scrollable>
-      @for (event of events | async; track event.id) {
-        <app-event [model]="event"></app-event>
-      }
-    </app-scrollable>
-  </div>
+<div class="events">
+  @for (event of events | async; track event.id) {
+    <app-event [model]="event"></app-event>
+  }
 </div>
