--- a/src/app/pages/expertise/expertise.component.html
+++ b/src/app/pages/expertise/expertise.component.html
@@ -1,12 +1,5 @@
-<div class="post">
-  <div class="title">
-    <h2>{{ (page | async)?.title }}</h2>
-  </div>
-  <div class="entry">
-    <app-scrollable>
-      @for (skill of skills | async; track skill.id) {
-        <app-skill [model]="skill" />
-      }
-    </app-scrollable>
-  </div>
+<div>
+  @for (skill of skills | async; track skill.id) {
+    <app-skill [model]="skill" />
+  }
 </div>
