--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,3 +1,9 @@
 .entry {
-  margin: 25px 25px 25px;
+  line-height: 1.7;
 }
+
+.image {
+    box-shadow: var(--shadow-md);
+    max-width: 200px;
+    border-radius: var(--radius-md);
+  }
