--- a/src/app/pages/interests/interests.component.scss
+++ b/src/app/pages/interests/interests.component.scss
@@ -1,18 +1,29 @@
+@use 'styles' as *;
+
 .interests {
-  margin: 25px 25px 25px;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  gap: var(--spacing-md);
 
   .interest-details {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    margin-bottom: 10px;
+    gap: var(--spacing-lg);
+
+    @include small {
+      flex-direction: column;
+      gap: var(--spacing-sm);
+    }
 
     .interest-title {
-      width: 200px;
-      font-weight: bold;
+      min-width: 8rem;
+      font-weight: 600;
+      font-size: var(--font-size-base);
+      color: var(--color-text);
+
+      @include small {
+        min-width: auto;
+      }
     }
   }
 }
