--- a/src/app/pages/teaching/institution/institution.component.html
+++ b/src/app/pages/teaching/institution/institution.component.html
@@ -1,7 +1,13 @@
-<div class="head">
-  <h3>{{ model.name }}</h3>
-  <img [src]="model.icon.url" [alt]="model.name" />
+<div class="institution">
+  <app-entry>
+    <div visual>
+      <img [src]="model.icon.url" [alt]="model.name" />
+    </div>
+    <div content>
+      <h3 class="institution__name">{{ model.name }}</h3> 
+      @for (topic of model.classes; track topic.id) {
+        <app-topic [model]="topic"></app-topic>
+      }
+    </div>
+  </app-entry>
 </div>
-@for (topic of model.classes; track topic.id) {
-  <app-topic [model]="topic"></app-topic>
-}
