WIP Rework design

--- a/src/app/layout/default/default.component.html
+++ b/src/app/layout/default/default.component.html
@@ -1,11 +1,10 @@
-<div id="wrapper">
+<div>
   <app-header></app-header>
   <main id="page">
     <div id="content-wrapper">
       <div id="content">
         <ng-content></ng-content>
       </div>
-      <app-sidebar></app-sidebar>
     </div>
   </main>
   <app-footer></app-footer>
