--- a/src/app/layout/default/default.component.scss
+++ b/src/app/layout/default/default.component.scss
@@ -1,16 +1,9 @@
-#wrapper {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  background: var(--color-background);
-}
-
 #page {
   flex: 1;
   width: 100%;
   max-width: var(--max-width);
-  margin: 0 auto;
-  padding: var(--spacing-xl) var(--spacing-lg);
+  margin: 0;
+  padding: var(--spacing-xl) 0;
 }
 
 #content-wrapper {
@@ -22,7 +15,6 @@
 #content {
   flex: 1;
   min-width: 0;
-  max-width: var(--content-width);
 }
 
 @media (max-width: 1024px) {
