--- a/src/app/layout/default/menu-link/menu-link.component.scss
+++ b/src/app/layout/default/menu-link/menu-link.component.scss
@@ -1,1 +1,20 @@
+a, span {
+    display: inline-block;
+    padding: var(--spacing-sm) var(--spacing-md);
+    font-size: var(--font-size-sm);
+    font-weight: 500;
+    color: var(--color-text-primary);
+    text-decoration: none;
+    border-radius: var(--radius-md);
+    transition: all var(--transition);
+  }
 
+  a {
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  span.current {
+    text-decoration: underline;
+  }
