--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,12 +1,14 @@
 .entry {
-  margin: 0;
   line-height: 1.7;
-  
-  img.align-left {
+}
+
+.image {
     border-radius: var(--radius-lg);
     box-shadow: var(--shadow-md);
     max-width: 200px;
     margin-right: var(--spacing-xl);
     margin-bottom: var(--spacing-md);
+    margin-right: var(--spacing-lg);
+    margin-bottom: var(--spacing-md);
+    border-radius: var(--radius-md);
   }
-}
