Make right padding for left column global

--- a/src/app/shared/entry/entry.component.scss
+++ b/src/app/shared/entry/entry.component.scss
@@ -8,5 +8,6 @@
         display: flex;
         justify-content: flex-end;
         width: var(--left-margin);
+        padding-right: var(--spacing-lg);
     }
 }
