--- a/src/app/pages/career/experience/experience.component.scss
+++ b/src/app/pages/career/experience/experience.component.scss
@@ -6,8 +6,8 @@
     width: 100%;
 
     .header {
-      display: flex;
-      flex-direction: row;
+      display: grid;
+      grid-template-columns: 16em auto;
       margin-bottom: var(--spacing-sm);
       font-size: var(--font-size-sm);
       align-items: baseline;
@@ -20,7 +20,6 @@
         text-transform: uppercase;
         letter-spacing: 0.025em;
         display: inline-block;
-        width: 16em;
       }
 
       .job-title {
@@ -28,7 +27,6 @@
         font-weight: 600;
         color: var(--color-text);
         display: inline-block;
-        width: 32em;
       }
 
       .client {
@@ -36,6 +34,7 @@
         font-size: var(--font-size-sm);
         font-weight: 600;
         color: var(--color-text-secondary);
+        grid-column: 1 / span 2;
       }
     }
   }
