--- a/src/app/pages/career/career.component.html
+++ b/src/app/pages/career/career.component.html
@@ -1,4 +1,4 @@
-<div class="post">
+<div class="experiences">
   @for (experience of experiences | async; track experience.id) {
     <app-experience [model]="experience" />
   }
