--- a/src/app/layout/default/default.component.html
+++ b/src/app/layout/default/default.component.html
@@ -1,11 +1,7 @@
 <div>
   <app-header></app-header>
-  <main id="page">
-    <div id="content-wrapper">
-      <div id="content">
-        <ng-content></ng-content>
-      </div>
-    </div>
+  <main class="page">
+    <ng-content></ng-content>
   </main>
   <app-footer></app-footer>
 </div>
