--- a/src/app/layout/default/header/header.component.scss
+++ b/src/app/layout/default/header/header.component.scss
@@ -54,7 +54,8 @@
     margin-top: 3rem;
     position: sticky;
     top: calc(5.25rem + 2.5rem + 2rem);
-    height: 2.5rem;
+    height: 3rem;
+    padding-top: .5rem;
     width: 100%;
 
     &__content {
