--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,12 @@
 /* Modern Minimal Design System */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
+$beakpoint-small: 768px;
+
+@mixin small {
+  @media (max-width: $beakpoint-small) { @content; }
+}
+
 :root {
   /* Colors */
   --color-primary: #2563eb;
@@ -51,6 +57,10 @@
   --radius-lg: 0.75rem;
   --radius-xl: 1rem;
   --transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @include small {
+    --left-margin: 30vw;
+  }
 }
 
 * {
